app/assets/stylesheets/components/_button.scss
.unscroll-btn {
  border-radius: 3px;
  width: 100%;
  padding: 6px 12px;
  text-align: center;
  display: block;
}

.unscroll-btn-sm {
  border-radius: 3px;
  padding: 6px 12px;
  text-align: center;
}

.unscroll-btn-primary {
  background-color: $primary-color;
  color: var(--light);
  transition: 1s;

  &:hover {
    color: var(--light);
    opacity: .8;
  }
}

.unscroll-btn-ghost {
  border: 1px solid $primary-color;
  color: $primary-color;

  &:hover {
    color: $primary-color;
    opacity: .8;
    transition: 1s;

  }
}

.fixed-bottom-right {
  position: fixed;
  bottom: 65px;
  right: 15px;
}

.back-button-wrapper {
  position: fixed;
  top: 15px;
  left: 15px;

  a {
    color: $primary-color;
  }
}

